feat: improve cash register discrepancy logic using sales sum