@@ -5,7 +5,6 @@ import com.supermarket.supermarket.model.notification.Notification;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class NotificationMapper {
@@ -27,6 +26,6 @@ public class NotificationMapper {
         if (notifications == null) return null;
         return notifications.stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
